fixed Navbar z-index

--- a/src/styles/CV_Templates.css
+++ b/src/styles/CV_Templates.css
@@ -8,7 +8,7 @@
     padding-top: 30px;
     background-color: rgb(239, 239, 247);
     box-shadow: 2px 2px 2px 2px rgba(34, 36, 38, .15);
-    z-index: 7;
+    z-index: 0;
 
 
 }
