--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -15,6 +15,7 @@
   margin-bottom: 0.7rem;
   transition: all ease-in-out 0.2s;
 }
+
 .wrapper .open span:nth-child(2) {
   opacity: 0;
 }
@@ -37,7 +38,9 @@
   align-items: center;
   justify-content: center;
   color: black;
+  z-index: 100;
 }
+
 h1 {
   font-size: 2.5rem;
 }
@@ -50,14 +53,17 @@ h1 {
   top: 4.5rem;
   left: 0;
   right: 0;
+  z-index: 1000;
 }
+
 ul {
   list-style-type: none;
   padding: 2rem 1rem 2rem 2rem;
   height: 40px;
-padding: 0;
-margin-top: 5px;
+  padding: 0;
+  margin-top: 5px;
 }
+
 ul li {
   transition: all 300ms linear 0s;
   width: 100%;
@@ -72,7 +78,7 @@ ul li {
 }
 
 ul li a {
-  color: black!important;
+  color: black !important;
   font-size: 1.4rem;
   line-height: 2;
   color: #dfe6e9;
@@ -80,12 +86,16 @@ ul li a {
   text-decoration: none;
   cursor: pointer;
 }
+
 ul.minMenu li a:hover {
-  color: #2438f1!important; 
+  color: #2438f1 !important;
   border-bottom: 1px solid #2438f1;
 }
 
 /* NAVBAR STYLE */
+.navWrapper {
+  z-index: 100;
+}
 
 .FlexContainer {
   max-width: 120rem;
@@ -96,19 +106,24 @@ ul.minMenu li a:hover {
   height: 5rem;
   z-index: 10;
 }
+
 div.BurgerWrapper {
   margin: auto 0;
 }
+
 @media (min-width: 769px) {
   div.BurgerWrapper {
     display: none;
   }
+
   ul.minMenu {
     display: none;
   }
 }
 
 @media (max-width: 768px) {
-  ul div.DropMenu {display: none}
- 
+  ul div.DropMenu {
+    display: none
+  }
+
 }
